[gd_scene load_steps=24 format=2]

[ext_resource path="res://Asset/1-1 Downnton Sze.png" type="Texture" id=1]
[ext_resource path="res://Actor/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Barrel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asset/Envi/Tutorial1. 3 (2).png" type="Texture" id=4]
[ext_resource path="res://Tutorial.gd" type="Script" id=5]
[ext_resource path="res://Script/BulletManager.gd" type="Script" id=6]
[ext_resource path="res://Asset/Item/Power_Up.tscn" type="PackedScene" id=7]
[ext_resource path="res://Actor/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://Actor/EnemyJelly.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/Tutorial_pop.tscn" type="PackedScene" id=11]
[ext_resource path="res://Asset/Panel.png" type="Texture" id=12]
[ext_resource path="res://Asset/Item/Shotgun Ammo.png" type="Texture" id=13]
[ext_resource path="res://Asset/Font/PressStart2P-Regular.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Asset/Envi/Pabrik4x.png" type="Texture" id=15]
[ext_resource path="res://Asset/Envi/Tutornew.png" type="Texture" id=16]

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 1280, 0, 1280, 294.819, 0, 288.598, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 2.44165, 636.963, 1275.63, 639.037, 1277.71, 987.402, 0, 991.549, 0, 272.01 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 1277.71, 0, 1280, 310.79, 4.51514, 314.938, 0, 711.613, 0, 0.368042, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 2.44165, 634.89, 1275.63, 634.89, 1275.63, 736, 2.44165, 736 )

[sub_resource type="TileSet" id=1]
0/name = "1-1 Downnton Sze.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 192, 1280, 608 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Tutorial1. 3 (2).png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 1280, 992 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 4 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Tutornew.png 2"
2/texture = ExtResource( 16 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 1280, 736 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 6 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Tutornew.png 3"
3/texture = ExtResource( 16 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 736, 1280, 288 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Pabrik4x.png 4"
4/texture = ExtResource( 15 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 1280, 736 )
4/tile_mode = 1
4/autotile/bitmask_mode = 0
4/autotile/bitmask_flags = [  ]
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 32, 32 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="LineShape2D" id=2]
normal = Vector2( -1, 0 )
d = 2.23607

[sub_resource type="DynamicFont" id=3]
size = 18
extra_spacing_bottom = 3
font_data = ExtResource( 14 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 5 )

[node name="UI" parent="." instance=ExtResource( 10 )]

[node name="TileMap" type="TileMap" parent="."]
z_index = -3
tile_set = SubResource( 1 )
show_collision = true
format = 1
tile_data = PoolIntArray( 0, 2, 0, 720896, 3, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 34, 345 )

[node name="Barrel" parent="." instance=ExtResource( 3 )]
position = Vector2( 1168, 599 )

[node name="BulletManager" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Enemy" parent="." instance=ExtResource( 8 )]
position = Vector2( 871, 423 )

[node name="Enemy2" parent="." instance=ExtResource( 8 )]
position = Vector2( 868, 573 )

[node name="EnemyJelly" parent="." instance=ExtResource( 9 )]
position = Vector2( 1059, 482 )

[node name="Power_Up" parent="." instance=ExtResource( 7 )]
position = Vector2( 423, 628 )

[node name="Tutorial_pop" parent="." instance=ExtResource( 11 )]
visible = false

[node name="musuh_conf_col" type="Area2D" parent="."]
position = Vector2( 572, 495 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="musuh_conf_col"]
position = Vector2( -26, -2 )
scale = Vector2( 1, 1.5 )
shape = SubResource( 2 )

[node name="musuh_conf" type="Container" parent="musuh_conf_col"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="musuh_conf_col/musuh_conf"]
margin_right = 40.0
margin_bottom = 40.0

[node name="MC_Skip_Btn" type="Button" parent="musuh_conf_col/musuh_conf"]
margin_right = 12.0
margin_bottom = 20.0
text = "nex"

[node name="Enemy_pop" type="CanvasLayer" parent="musuh_conf_col"]
pause_mode = 2
visible = false

[node name="Sprite" type="Sprite" parent="musuh_conf_col/Enemy_pop"]
position = Vector2( 509.4, 180.5 )
scale = Vector2( 0.312109, 0.248047 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="musuh_conf_col/Enemy_pop"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -270.0
margin_top = 66.0
margin_right = 274.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 3 )
text = "Lihat di depan terdapat
musuh berhati hati lah


musuh yang mati memiliki
kemungkinan untuk menjatuhkan
special ammunition yang di 
perlukan untuk melakukan skill"

[node name="Sprite2" type="Sprite" parent="musuh_conf_col/Enemy_pop"]
position = Vector2( 271, 277 )
scale = Vector2( 0.465, 0.465 )
texture = ExtResource( 13 )

[node name="Enemy_close_btn" type="Button" parent="musuh_conf_col/Enemy_pop"]
margin_left = 740.0
margin_top = 281.0
margin_right = 787.0
margin_bottom = 301.0
text = "Close"

[connection signal="body_entered" from="musuh_conf_col" to="." method="_on_musuh_conf_col_body_entered"]
[connection signal="pressed" from="musuh_conf_col/musuh_conf/MC_Skip_Btn" to="." method="_on_MC_Skip_Btn_pressed"]
[connection signal="pressed" from="musuh_conf_col/Enemy_pop/Enemy_close_btn" to="." method="_on_Enemy_close_btn_pressed"]
